# python-client

./: .gitignore  my_rel_data.json  pyproject.toml
src/: interfaces.py  jrpc.py  queries.py  result_set.py  subscriptions.py  triggerware_client.py
src/triggerware/: __init__.py  jrpc.py  queries.py  result_set.py  subscriptions.py  triggerware_client.py  types.py
tests/: execute.py  test_client.py
