[tool.poetry]
name = "triggerware"
version = "0.1.0"
description = ""
authors = ["godofavacyn <aidenmeyer@mailbox.org>"]
readme = "README.md"
packages = [{include = "triggerware", from = "src"}]

[tool.poetry.dependencies]
python = ">3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
reportPrivateUsage = true
